# eplus-stubgen

./: pyproject.toml
.github/workflows/: build.yml
eplus-stubgen/: LICENSE  README.md  pyproject.toml
eplus-stubgen/src/mypy_eppy_builder/: idd_parser.py
eplus-stubgen/src/mypy_eppy_builder/templates/eppy/: README.md.j2
eplus-stubgen/tests/: test_emitter_smoke.py  test_idd_parser.py
fixtures/idd/: min.idd
src/mypy_eppy_builder/: __init__.py  build_cli.py  typed_emitter.py
src/mypy_eppy_builder/templates/archetypal/: README.md.j2  __init__.pyi.j2
src/mypy_eppy_builder/templates/eppy/: __init__.pyi.j2
tests/samples/: bad.py  ok.py
